# althand

app/: .gitignore  package-lock.json  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: hotkey.rs  lib.rs  main.rs  tray.rs  window.rs
app/src/routes/: +page.svelte
