[package]
name = "althand"
version = "0.1.0"
edition = "2021"

[lib]
name = "althand_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# plugins
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

# dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
